Removed duplicate button, fixed some css issues with overflow and flex-shrink (#51)

--- a/src/app/commonStyles/input.less
+++ b/src/app/commonStyles/input.less
@@ -25,6 +25,7 @@
 
 	button {
 		margin-bottom: 10px;
+		flex-shrink: 0;
 	}
 
 	label {
