--- a/src/app/components/app.less
+++ b/src/app/components/app.less
@@ -103,6 +103,7 @@ li a:hover, li a:active {
 	display: flex;
 	flex-grow: 1;
 	height: 100%;
+	overflow: auto;
 	justify-content: center;
 	width: 100%;
 }
