--- a/src/app/components/homePage/shared/eventPortal.less
+++ b/src/app/components/homePage/shared/eventPortal.less
@@ -292,6 +292,7 @@
   .confirmation {
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
 
     button {
       flex-grow: .5;
@@ -340,6 +341,7 @@
   .time-setter {
     display: flex;
     flex-grow: 1;
+    flex-shrink: 0;
 
     .submit {
       display: flex;
